--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
         "eslint": "latest",
         "eslint-config-next": "latest",
         "postcss": "latest",
-        "prettier": "^3.3.2",
+        "prettier": "3.3.2",
         "sass": "^1.69.5",
         "tailwindcss": "latest"
     }
